[project]
name = "python_custom_functions"
version = ""
description = "Storage for custom functions for use in different projects"
readme = "README.md"
keywords = [
]
license = ""
maintainers = [
  {name = "Loïc Nazaries", email = "loicnazaries@yahoo.fr"},
]
authors = [
  {name = "Loïc Nazaries", email = "loicnazaries@yahoo.fr"},
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
]
[project.optional-dependencies]
cli = [
]
gui = [
]
test = [
]
[project.urls]
documentation = ""
homepage = ""
repository = "https://github.com/loic-nazaries/python_custom_functions.git"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
  \.git
| \.hg
| \.mypy_cache
| \.__pycache__
| \.tox
| \.venv
| \venv
| _build
| buck-out
| build
)/
'''

[tool.ruff]
fix = false
unfixable = [
    "ERA",    # do not autoremove commented out code
]
line-length = 88
extend-select = [
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "I",      # isort
    "N",      # pep8-naming
    "PIE",    # flake8-pie
    "PGH",    # pygrep
    "PL",     # pylint
    "RUF",    # ruff checks
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2

[tool.ruff.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files
"__init__.py" = ["E402"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 90
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
generate-badge = "."
badge-format = "svg"
